Add routing, team page, initial text & assets

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,28 @@
 <p>
   footer works!
 </p>
+
+<div class="container footer" 
+    fxLayout="row wrap" 
+    fxLayout.sm="column wrap" 
+    fxLayout.xs="column wrap" 
+    fxLayoutAlign.sm="start center"
+    fxLayoutAlign.xs="start center" 
+    fxLayoutAlign.gt-sm="center center" 
+    fxLayoutGap="10px">
+
+  <div fxFlex="100%" fxFlex.gt-sm="45%">
+    <div style="text-align:center">
+      <a md-icon-button class="btn-google-plus" href="http://google.com/+"><i class="fa fa-google-plus fa-lg"></i></a>
+      <a md-icon-button class="btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook fa-lg"></i></a>
+      <a md-icon-button class="btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter fa-lg"></i></a>
+      <a md-icon-button class="btn-youtube" href="http://youtube.com/"><i class="fa fa-youtube fa-lg"></i></a>
+      <a md-icon-button class="btn-mail" href="mailto:ratedrko3@gmx.at"><i class="fa fa-envelope-o fa-lg"></i></a>
+    </div>
+  </div>
+  <div fxFlex="100%" fxFlexAlign="center center">
+    <div style="text-align:center;">
+      <p>© Copyright 2018 Stefan Jaindl</p>
+    </div>
+  </div>
+</div>
