--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,12 @@
 <p>
   header works!
 </p>
+
+<mat-toolbar color="primary">
+  <span><img src="/assets/images/logo.jpg" height="10%" width="10%"></span>
+  <a md-button routerLink="/home" routerLinkActive="active"><span class="fa fa-home fa-lg"></span> Home</a>
+  <a md-button routerLink="/team" routerLinkActive="active"><span class="fa fa-info fa-lg"></span> Team</a>
+  <span class="flex-spacer"></span>
+  <!-- <a md-button (click)="openSignInForm()"><span class="fa fa-sign-in fa-lg"></span>Login</a> -->
+
+</mat-toolbar>
