--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,33 @@
-<p>
-  home works!
-</p>
+<div style="text-align:center">
+  <h1>
+    Welcome to {{ title }}!
+  </h1>
+  <!-- <img width="300" alt="HVTDP Logo" src="assets/images/logo.jpg"> -->
+</div>
+
+<div id="container">
+    <div
+      ng2-carouselamos
+      class="slides-wrapper"
+      [items]="items"
+      [width]="400"
+      [$prev]="prev"
+      [$next]="next"
+      [$item]="item"
+    >
+    </div>
+  
+
+  <ng-template #prev>
+    <img src="assets/images/chevron_left.svg" id="left" />
+  </ng-template>
+  <ng-template #next>
+    <img src="assets/images/chevron_right.svg" id="right" />
+  </ng-template>
+  <ng-template #item let-item let-i="index">
+
+      <div class="items">
+        <img src="{{ item.name }}" width=400 height="625">
+      </div>
+
+  </ng-template>
