feat: Add components & routes

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,31 @@
 <mat-toolbar color="primary">
-  <span><img src="/assets/images/logo.jpg" height="10%" width="10%"></span>
-  <a md-button routerLink="/home" routerLinkActive="active"><span class="fa fa-home fa-lg"></span> Home</a>
+  <span><img src="/assets/images/logo.jpg" height="40px" width="40px"></span>
   <span class="flex-spacer"></span>
-  <a md-button routerLink="/team" routerLinkActive="active"><span class="fa fa-info fa-lg"></span> Team</a>
+  <a md-button routerLink="/home" routerLinkActive="active"><span class="fa fa-home fa-sm"></span>Home</a>
   <span class="flex-spacer"></span>
+  <a md-button routerLink="/news" routerLinkActive="active"><span class="fa fa-info fa-lg"></span>News</a>
+  <span class="flex-spacer"></span>
+  <a md-button routerLink="/team" routerLinkActive="active"><span class="fa fa-info fa-lg"></span>Mannschaft</a>
+  <span class="flex-spacer"></span>
+  <a md-button routerLink="/championship" routerLinkActive="active"><span class="fa fa-info fa-lg"></span>Meisterschaft</a>
+  <span class="flex-spacer"></span>
+  <a md-button routerLink="/gallery" routerLinkActive="active"><span class="fa fa-info fa-lg"></span>Gallerie</a>
+  <span class="flex-spacer"></span>
+  <a md-button routerLink="/social" routerLinkActive="active"><span class="fa fa-info fa-lg"></span>Social Media</a>
+  <span class="flex-spacer"></span>
+  <a md-button routerLink="/donation" routerLinkActive="active"><span class="fa fa-info fa-lg"></span>Matchballspende</a>
+  <span class="flex-spacer"></span>
+  <a md-button routerLink="/about" routerLinkActive="active"><span class="fa fa-info fa-lg"></span>Über uns</a>
+  <span class="flex-spacer"></span>
+  <a md-button routerLink="/contact" routerLinkActive="active"><span class="fa fa-info fa-lg"></span>Kontakt</a>
+  <span class="flex-spacer"></span>
+  <a md-button routerLink="/fanshop" routerLinkActive="active"><span class="fa fa-info fa-lg"></span>Fanshop</a>
+  <span class="flex-spacer"></span>
+  <a md-button routerLink="/membership" routerLinkActive="active"><span class="fa fa-info fa-lg"></span>Mitgliedschaft</a>
+  <span class="flex-spacer"></span>
+  <a md-button routerLink="/halloffame" routerLinkActive="active"><span class="fa fa-info fa-lg"></span>Hall of Fame</a>
+  <span class="flex-spacer"></span>
+
   <!-- <a md-button (click)="openSignInForm()"><span class="fa fa-sign-in fa-lg"></span>Login</a> -->
 
 </mat-toolbar>
