feat: Add Banner to home component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,35 @@
+<!-- Banner -->
+<div class="ticker-wrap">
+    <div class="ticker">
+      <div class="ticker__item">BREAKING NEWS:</div>
+      <div class="ticker__item">Dezember 2017: Der 1. HVTDP Stainz ist offiziell ein Verein!</div>
+      <div class="ticker__item">Der 1. HVTDP Stainz ist Meister 2018 im Südweststeirercup!</div>
+      <div class="ticker__item">Save the date: 30.06.2018, Stainzer Kleinfeldturnier</div>
+      <div class="ticker__item">Nicht verpassen: 14.07.2018, Meisterfeier vom 1. HVTDP in der Village Bar</div>
+    </div>
+</div>
+
+ <!-- <p>So, annoyingly, most JS solutions don't do horizontal tickers on an infinite loop, nor do they render all that smoothly.</p>
+      <p>The difficulty with CSS was getting the animation to transform the entire items 100% yet include an offset that was only the width of the browser (and not the items full width).</p>
+      <p>Setting the start of the animation to anything less than zero (e.g. -100%) is unreliable as it is based on the items width, and may not offset the full width of the browser or creates too large an offset</p>
+      <p>Padding left on the wrapper allows us the correct initial offset, but you still get a 'jump' as it then loops too soon. (The full text does not travel off-screen)</p>
+      <p>This is where adding display:inline-block to the item parent, where the natural behaviour of the element exists as inline, gives an opportunity to add padding-right 100% here. The padding is taken from the parent (as its treated as inline) which usefully is the wrapper width.</p>
+      <p><b>Magically*</b> we now have perfect 100% offset, a true 100% translate (width of items) and enough padding in the element to ensure all items leave the screen before it repeats! (width of browser)</p>
+      <p>*Why this works: The inside of an inline-block is formatted as a block box, and the element itself is formatted as an atomic inline-level box. <br>Uses `box-sizing: content-box`<br>
+      Padding is calculated on the width of the containing box.<br>
+      So as both the ticker and the items are formatted as nested inline, the padding must be calculated by the ticker wrap.</p>
+      
+      <p>Ticker content c/o <a href="http://hipsum.co/">Hipsum.co</a></p> -->
+
+<br><br><br><br>
 <div style="text-align:center">
   <h1>
-    Welcome to {{ title }}!
+    Willkommen auf der Homepage vom {{ title }}!
   </h1>
-  <!-- <img width="300" alt="HVTDP Logo" src="assets/images/logo.jpg"> -->
+  <img width="300" alt="HVTDP Logo" src="assets/images/logo.jpg">
 </div>
+
+<!-- Image Slider -->
 
 <div id="container">
     <div
@@ -13,8 +39,8 @@
       [width]="400"
       [$prev]="prev"
       [$next]="next"
-      [$item]="item"
-    >
+      [$item]="item">
+
     </div>
   
 
@@ -27,7 +53,7 @@
   <ng-template #item let-item let-i="index">
 
       <div class="items">
-        <img src="{{ item.name }}" width=400 height="625">
+        <img src="{{ item.name }}" width="400" height="625">
       </div>
 
   </ng-template>
