feat: Add Social

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,7 +21,14 @@
       
       <p>Ticker content c/o <a href="http://hipsum.co/">Hipsum.co</a></p> -->
 
-<br><br><br><br>
+<!-- Social feed -->
+<div class="icon-bar">
+  <a href="https://www.facebook.com/hvtdpstainz/" target="_blank" class="facebook"><i class="fa fa-facebook"></i></a> 
+  <a href="https://twitter.com/HvStainz/" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a> 
+  <a href="mailto:ratedrko3@gmx.at" class="mail"><i class="fa fa-envelope"></i></a> 
+  <a href="https://www.instagram.com/hvtdpstainz_2014/" target="_blank" class="instagram"><i class="fa fa-instagram"></i></a> 
+</div>
+
 <div style="text-align:center">
   <h1>
     Willkommen auf der Homepage vom {{ title }}!
@@ -40,9 +47,7 @@
       [$prev]="prev"
       [$next]="next"
       [$item]="item">
-
     </div>
-  
 
   <ng-template #prev>
     <img src="assets/images/chevron_left.svg" id="left" />
