--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -121,3 +121,46 @@ img {
     padding: 0 5%;
   }
   
+  /* Social */
+
+  .icon-bar {
+	position: fixed;
+	top: 50%;
+	right: 0%;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
+  }
+  
+  .icon-bar a {
+	display: block;
+	text-align: center;
+	padding: 16px;
+	transition: all 0.3s ease;
+	color: white;
+	font-size: 20px;
+  }
+  
+  .icon-bar a:hover {
+	  background-color: #000;
+  }
+  
+  .facebook {
+	background: #3B5998;
+	color: white;
+  }
+  
+  .twitter {
+	background: #55ACEE;
+	color: white;
+  }
+  
+  .mail {
+	background: #dd4b39;
+	color: white;
+  }
+  
+  .instagram {
+	background: #e4405f;
+	color: white;
+  }
