feat: Add Championship component

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -1,3 +1,11 @@
-<p>
-  championship works!
-</p>
+<h1>Tabelle</h1>
+
+<iframe src="https://www.meinspielplan.de/plan/3hjrgw?box=table&title=yes#https%3A%2F%2Fsued-weststeirischercup.jimdo.com%2Fspielbetrieb%2F" frameborder="0" allowfullscreen width="550" height="200">
+</iframe>
+
+<h1>Spielplan</h1>
+
+<div class="h_iframe">
+  <iframe src="https://www.meinspielplan.de/plan/3hjrgw?box=dates&title=yes&dates=round#https%3A%2F%2Fsued-weststeirischercup.jimdo.com%2Fspielbetrieb%2" frameborder="0" allowfullscreen height="1400">
+  </iframe>
+</div>
