feat: Stylings for header & footer

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,3 @@
-<p>
-  footer works!
-</p>
-
 <div class="container footer" 
     fxLayout="row wrap" 
     fxLayout.sm="column wrap" 
@@ -13,10 +9,9 @@
 
   <div fxFlex="100%" fxFlex.gt-sm="45%">
     <div style="text-align:center">
-      <a md-icon-button class="btn-google-plus" href="http://google.com/+"><i class="fa fa-google-plus fa-lg"></i></a>
-      <a md-icon-button class="btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook fa-lg"></i></a>
-      <a md-icon-button class="btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter fa-lg"></i></a>
-      <a md-icon-button class="btn-youtube" href="http://youtube.com/"><i class="fa fa-youtube fa-lg"></i></a>
+      <a md-icon-button class="btn-facebook" href="https://www.facebook.com/hvtdpstainz/" target="_blank"><i class="fa fa-facebook fa-lg"></i></a>
+      <a md-icon-button class="btn-twitter" href="https://twitter.com/HvStainz/" target="_blank"><i class="fa fa-twitter fa-lg"></i></a>
+      <a md-icon-button class="btn-instagram" href="https://www.instagram.com/hvtdpstainz_2014/" target="_blank"><i class="fa fa-instagram fa-lg"></i></a>
       <a md-icon-button class="btn-mail" href="mailto:ratedrko3@gmx.at"><i class="fa fa-envelope-o fa-lg"></i></a>
     </div>
   </div>
