feat: Add coming soon

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,7 +17,7 @@
             <span class="flex-spacer"></span>
             <a md-button routerLink="/gallery" routerLinkActive="active"><span class="fa fa-info fa-lg"></span>Gallerie</a>
             <span class="flex-spacer"></span>
-            <a md-button routerLink="/social" routerLinkActive="active"><span class="fa fa-info fa-lg"></span>Social Media</a>
+            <a md-button routerLink="/social" routerLinkActive="active"><span class="fa fa-info fa-lg"></span>Social</a>
             <span class="flex-spacer"></span>
             <a md-button routerLink="/donation" routerLinkActive="active"><span class="fa fa-info fa-lg"></span>Matchballspende</a>
             <span class="flex-spacer"></span>
@@ -49,7 +49,7 @@
           <a md-button routerLink="/team" routerLinkActive="active" mat-list-item><span class="fa fa-info fa-lg"></span>Mannschaft</a>
           <a md-button routerLink="/championship" routerLinkActive="active" mat-list-item><span class="fa fa-info fa-lg"></span>Meisterschaft</a>
           <a md-button routerLink="/gallery" routerLinkActive="active" mat-list-item><span class="fa fa-info fa-lg"></span>Gallerie</a>
-          <a md-button routerLink="/social" routerLinkActive="active" mat-list-item><span class="fa fa-info fa-lg"></span>Social Media</a>
+          <a md-button routerLink="/social" routerLinkActive="active" mat-list-item><span class="fa fa-info fa-lg"></span>Social</a>
           <a md-button routerLink="/donation" routerLinkActive="active" mat-list-item><span class="fa fa-info fa-lg"></span>Matchballspende</a>
           <a md-button routerLink="/about" routerLinkActive="active" mat-list-item><span class="fa fa-info fa-lg"></span>Über uns</a>
           <a md-button routerLink="/contact" routerLinkActive="active" mat-list-item><span class="fa fa-info fa-lg"></span>Kontakt</a>
