--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,3 +1,6 @@
-<p>
-  news works!
-</p>
+<h1 style="text-align: center;">
+    COMING SOON!
+</h1>
+<img class="center" src="assets/images/comingsoon.jpg">
+<br>
+<br>
