--- a/src/styles.css
+++ b/src/styles.css
@@ -79,3 +79,10 @@ body {
 body {
     color: darkorchid;
 }
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
