--- a/src/app/fanshop/fanshop.component.html
+++ b/src/app/fanshop/fanshop.component.html
@@ -1,3 +1,47 @@
-<p>
-  fanshop works!
-</p>
+
+<div class="container"
+fxLayout="column"
+fxLayoutGap="10px">
+
+  <div fxFlex>
+    <div>
+      <h1>Fanshop</h1>
+    <hr>
+    </div>
+  </div>
+
+  <p class="normal">
+    Was darf bei einem richtigen Fan des HV TDP Stainz nicht fehlen?
+  </p>
+
+  <p class="small">
+    Natürlich die passenden Souvenirs und Outfits. Deshalb bieten wir ein paar nette Geschenke und Andenken in unserem offiziellen Fanshop an!
+    <br>
+    Mit einem Kauf wird nicht nur das heimische Wohnen und sein eigener Dresscode aufgepeppt, sondern man fördert mit einem Kauf auch das Vereinsleben und den sportlichen Betrieb unseres Vereines.
+  </p>
+
+  <p class="small">
+    Folgende Artikel stehen zur Auswahl:
+    <br>
+    (bestellen ganz einfach mit einer Nachricht an unsere Facebookseite oder E-Mail Adresse)
+  </p>
+
+  <div fxFlex>
+    <mat-grid-list cols="2" rowHeight="510px">
+      <mat-grid-tile *ngFor="let item of items" appHighlight >
+        <img height="400px" src="{{item.imagePath}}" alt={{item.name}} style="z-index: 15">
+        <mat-grid-tile-header>
+          <h1 mat-line>{{item.name | uppercase}}</h1>
+          <h2 style="text-align: right;" mat-line>{{item.price}}</h2>
+        </mat-grid-tile-header>
+        <mat-grid-tile-footer style="text-align: center">
+          {{item.description}}
+        </mat-grid-tile-footer>
+        &nbsp; <a md-icon-button class="btn-mail" href="mailto:ratedrko3@gmx.at?subject=Bestellung {{item.name}}&body={{item.description}}"><i class="fa fa-envelope-o fa-lg" ></i></a>
+      </mat-grid-tile>
+    </mat-grid-list>
+  </div>
+
+</div>
+
+<br>
