--- a/src/styles.css
+++ b/src/styles.css
@@ -86,3 +86,22 @@ body {
     margin-right: auto;
     width: 50%;
 }
+
+.small {
+    /* font-size: 2vw; */
+    font-size: 100%;
+}
+
+.normal {
+    /* font-size: 2.5vw; */
+    font-size: 125%;
+}
+
+.large {
+    /* font-size: 3.5vw; */
+    font-size: 200%;
+}
+
+.bold {
+    font-weight: bold;
+}
