--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -2,7 +2,7 @@
     position: absolute;
     top: 1;
     left: 0;
-    width: 100%;
+    width: 165px;
     height: 100%;
     z-index: 10;
     background-color: rgba(0,0,0,0.0);
