feat: Add sponsor to footer

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -16,6 +16,10 @@
     </div>
   </div>
   <div fxFlex="100%" fxFlexAlign="center center">
+    <br>
+    <a href="http://www.textildruckprofi.com/" target="blank">
+      <img class="imageSmallCenter" src="assets/images/tdp.jpg" width="10%">
+    </a>
     <div style="text-align:center;">
       <p>© Copyright 2018 Stefan Jaindl</p>
     </div>
