feat: Restyle AboutComponent

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,8 @@
+<h1>Über uns</h1>
+
 <p class="small">
   Der Hobbyfußballverein <span class = "bold">Textildruckprofi Stainz</span> (kurz <span class = "bold">HV TDP Stainz</span>) wurde im Jahr 2014 gegründet.
-  Aus einem Gespräch bei einem kühlen Blonden Erfrischungsgetränk zwischen Daniel Fabian und Eduard Orthaber entsprang die Idee einer Gründung eines Hobbyvereines. 
+  Aus einem Gespräch bei einem kühlen blonden Erfrischungsgetränk zwischen Daniel Fabian und Eduard Orthaber entsprang die Idee einer Gründung eines Hobbyvereines. 
 </p>
 
 <p class="small">
@@ -14,7 +16,7 @@
  
 <h2 class="large">Unsere größten Erfolge (Stand Sommer 2018):</h2>
 
-<ul class="normal">
+<ul class="small">
   <li>Meister Süd-Weststeirercup (2015, 2016, 2018)</li>
   <li>1x Vizemeister Süd-Weststeirercup (2017)</li>
   <li>2x Turniersieger des Hobbyhallenmasters in Leibnitz (2015, 2016)</li>
@@ -29,7 +31,7 @@
   Unser Vorstand setzt sich zusammen aus:
 </p>
 
-<ul class="normal">
+<ul class="small">
   <li>Daniel FABIAN (Obmann)</li>
   <li>Philipp BOHACEK (Obmann Stellvertreter)</li>
   <li>Mario KÜGERL (Kassier)</li>
