feat: Add NewsComponent

--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,6 +1,6 @@
 <h1 style="text-align: center;">
-    COMING SOON!
+    Wir sind Meister!
 </h1>
-<img class="center" src="assets/images/comingsoon.jpg">
+<img class="center" src="assets/images/meister.jpg">
 <br>
 <br>
