--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,6 +1,123 @@
-<h1 style="text-align: center;">
-    COMING SOON!
-</h1>
-<img class="center" src="assets/images/comingsoon.jpg">
-<br>
+<div style="text-align:center; ">
+    <h1>
+        Kontakt
+    </h1>
+    <img width="300" alt="HVTDP Logo" src="assets/images/logo.jpg">
+</div>
+
+
+<div class="container"
+     fxLayout="column"
+     fxLayoutGap="10px">
+
+     <div fxFlex>
+            <div>
+               <h3>Kontaktiere den 1. HVTDP Stainz</h3>
+               <hr>
+            </div>
+     </div>
+
+    <div fxFlex>
+      <div fxLayout="column" fxLayout.gt-sm="row">
+          <div fxFlex="50" fxFlexOffset="10px">
+                <h3>Unsere Addresse</h3>
+                <address>
+		              Engelweingartenstraße 12d/14<br>
+		              A-8510 Stainz<br>
+		              Österreich<br>
+		              <i class="fa fa-phone"></i>: +43 (660) 6878818<br>
+		              <i class="fa fa-envelope"></i>: 
+                        <a href="mailto:hvtdpstainz@gmx.at">hvtdpstainz@gmx.at</a>
+		           </address>
+               <p></p>
+                <div>
+                    <a md-raised-button href="tel:+436606878818"><i class="fa fa-phone"></i> Anruf</a>
+                    <a md-raised-button href="mailto:hvtdpstainz@gmx.at"><i class="fa fa-envelope-o"></i> Email</a>
+                </div>
+            </div>
+          <div fxFlex="50" fxFlexOffset="25px">
+            <h3 style="text-align: center;">Hier findest du unser Stadion:</h3>
+            <!-- this creates a google map on the page with the given lat/lng from -->
+            <!-- the component as the initial center of the map: -->
+              <agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" class="center" >
+                  <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+              </agm-map>
+          </div>
+        </div>
+      </div>
+      
+      <div fxFlex fxFlexOffset="20px" class="form-size" >
+          <h3>Sende uns dein Feedback</h3>
+          <!-- <p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p> -->
+          <form novalidate [formGroup]="feedbackForm" (ngSubmit)="onSubmit()" style="background-color: darkblue;color: rgba(255,255,255,.7);"> 
+            <p>
+              <mat-input-container class="half-width"
+              dividerColor="{{(formErrors.firstname) ? 'warn' : 'primary'}}">
+                <input class="formElement" matInput type="text" formControlName="firstname" placeholder="VorName" required>
+                <mat-hint>
+                  <span [hidden]="!(formErrors.firstname)">
+                    {{formErrors.firstname}}</span>
+                </mat-hint>
+              </mat-input-container>
+              <mat-input-container class="half-width"
+               dividerColor="{{(formErrors.lastname) ? 'warn' : 'primary'}}">
+                <input class="formElement" matInput formControlName="lastname" placeholder="Nachname" type="text" required>
+                <mat-hint>
+                  <span [hidden]="!(formErrors.lastname)">
+                    {{formErrors.lastname}}</span>
+                </mat-hint>
+              </mat-input-container>
+            </p>
+            <p>
+              <mat-input-container class="half-width"
+               dividerColor="{{(formErrors.telnum) ? 'warn' : 'primary'}}">
+                <input class="formElement" matInput formControlName="telnum" placeholder="TelefonNummer" type="tel" pattern="[0-9]*" required>
+                <mat-hint>
+                  <span [hidden]="!(formErrors.telnum)">
+                    {{formErrors.telnum}}</span>
+                </mat-hint>
+              </mat-input-container>
+              <mat-input-container class="half-width"
+               dividerColor="{{(formErrors.email) ? 'warn' : 'primary'}}">
+                <input matInput formControlName="email" placeholder="E-Mail" type="email" email required>
+                <mat-hint>
+                  <span [hidden]="!(formErrors.email)">
+                    {{formErrors.email}}</span>
+                </mat-hint>
+              </mat-input-container>
+            </p>
+            <table class="form-size">
+              <td>
+              <mat-slide-toggle formControlName="agree">Dürfen wir dich kontaktieren?</mat-slide-toggle>
+              </td>
+              <td>
+              <mat-select class="formElement" matInput name="contactType" placeholder="Wie?" formControlName="contacttype">
+                <mat-option *ngFor="let ctype of contactType" [value]="ctype">
+                  {{ ctype }}
+                </mat-option>
+              </mat-select>
+              </td>
+              </table>
+            <p>
+              <mat-input-container class="full-width">
+                <textarea class="formElement" matInput formControlName="message" placeholder="Dein Feedback" rows=12></textarea>
+              </mat-input-container>
+            </p>
+
+              <button style="margin: 100 auto;float: right; font-size: 20px" class="formElement" type="submit" mat-button class="background-primary" [disabled]="feedbackForm.invalid" >Senden</button>
+
+          </form>
+          <div *ngIf="submittedFeedback">
+              <h2>Dein Feedback:</h2>
+              <p>Vorname: {{submittedFeedback.firstname}}</p>
+              <p>Nachname: {{submittedFeedback.lastname}}</p>
+              <p>Telefonnummer: {{submittedFeedback.telnum}}</p>
+              <p>E-Mail: {{submittedFeedback.email}}</p>
+              <p>Dürfen wir dich kontaktieren?: {{submittedFeedback.agree}}</p>
+              <p>Wie?: {{submittedFeedback.contacttype}}</p>
+              <p>Feedback: {{submittedFeedback.message}}</p>
+          </div>
+        </div>
+
+</div>
 <br>
