--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,7 +26,7 @@
 <div class="icon-bar">
   <a href="https://www.facebook.com/hvtdpstainz/" target="_blank" class="facebook"><i class="fa fa-facebook"></i></a> 
   <a href="https://twitter.com/HvStainz/" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a> 
-  <a href="mailto:ratedrko3@gmx.at" class="mail"><i class="fa fa-envelope"></i></a> 
+  <a href="mailto:hvtdpstainz@gmx.at" class="mail"><i class="fa fa-envelope"></i></a> 
   <a href="https://www.instagram.com/hvtdpstainz_2014/" target="_blank" class="instagram"><i class="fa fa-instagram"></i></a> 
 </div>
 
