--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -12,7 +12,7 @@
       <a md-icon-button class="btn-facebook" href="https://www.facebook.com/hvtdpstainz/" target="_blank"><i class="fa fa-facebook fa-lg"></i></a>
       <a md-icon-button class="btn-twitter" href="https://twitter.com/HvStainz/" target="_blank"><i class="fa fa-twitter fa-lg"></i></a>
       <a md-icon-button class="btn-instagram" href="https://www.instagram.com/hvtdpstainz_2014/" target="_blank"><i class="fa fa-instagram fa-lg"></i></a>
-      <a md-icon-button class="btn-mail" href="mailto:ratedrko3@gmx.at"><i class="fa fa-envelope-o fa-lg"></i></a>
+      <a md-icon-button class="btn-mail" href="mailto:hvtdpstainz@gmx.at"><i class="fa fa-envelope-o fa-lg"></i></a>
     </div>
   </div>
   <div fxFlex="100%" fxFlexAlign="center center">
