feat: Add membership component

--- a/src/app/membership/membership.component.html
+++ b/src/app/membership/membership.component.html
@@ -1,6 +1,18 @@
 <h1 style="text-align: center;">
-    COMING SOON!
+    Werde Mitglied
 </h1>
-<img class="center" src="assets/images/comingsoon.jpg">
+
+<p class="normal">
+    Werde aktives oder förderndes Mitglied vom 1. HVTDP Stainz.
+</p>
+
+<p class="normal">
+    So einfach geht's:
+</p>
+
+<p class="normal">
+    Einfach die hier verlinkte <a href="assets/beitrittserklaerung.pdf">Beitrittserklärung</a> ausfüllen und an unsere E-Mail-Adresse <a href="mailto:hvtdpstainz@gmx.at">hvtdpstainz@gmx.at</a> senden.
+</p>
+
 <br>
 <br>
